--- a/packages/graphql-mini-transforms/package.json
+++ b/packages/graphql-mini-transforms/package.json
@@ -77,6 +77,7 @@
   "exports": {
     "./jest": "./jest.js",
     "./jest-simple": "./jest-simple.js",
+    "./webpack-loader": "./webpack-loader.js",
     "./webpack": "./webpack-loader.js",
     ".": {
       "esnext": "./index.esnext",
