--- a/packages/graphql-typescript-definitions/package.json
+++ b/packages/graphql-typescript-definitions/package.json
@@ -46,7 +46,13 @@
     "ts-node": "^8.0.3"
   },
   "peerDependencies": {
+    "@graphql-typed-document-node/core": "^1.0.0",
     "graphql-typed": ">=0.4.0 <2.0.0"
+  },
+  "peerDependenciesMeta": {
+    "@graphql-typed-document-node/core": {
+      "optional": true
+    }
   },
   "files": [
     "bin/*",
