--- a/packages/graphql-typescript-definitions/package.json
+++ b/packages/graphql-typescript-definitions/package.json
@@ -1,6 +1,6 @@
 {
   "name": "graphql-typescript-definitions",
-  "version": "3.0.0",
+  "version": "3.1.0-alpha.0",
   "license": "MIT",
   "description": "Generate TypeScript definition files from .graphql documents",
   "main": "index.js",
@@ -46,7 +46,13 @@
     "ts-node": "^8.0.3"
   },
   "peerDependencies": {
+    "@graphql-typed-document-node/core": "^3.1.1",
     "graphql-typed": ">=0.4.0 <2.0.0"
+  },
+  "peerDependenciesMeta": {
+    "@graphql-typed-document-node/core": {
+      "optional": true
+    }
   },
   "files": [
     "bin/*",
