--- a/packages/react-graphql-universal-provider/package.json
+++ b/packages/react-graphql-universal-provider/package.json
@@ -28,9 +28,8 @@
     "@shopify/react-hooks": "^3.0.0",
     "@shopify/react-html": "^12.0.0",
     "@shopify/react-network": "^5.0.0",
-    "apollo-cache-inmemory": ">=1.0.0 <2.0.0",
-    "apollo-client": ">=2.0.0 <3.0.0",
-    "apollo-link": ">=1.0.0 <2.0.0",
+    "@apollo/client": "^3.5.8",
+
     "apollo-link-context": ">=1.0.0 <2.0.0"
   },
   "peerDependencies": {
