--- a/packages/react-graphql-universal-provider/package.json
+++ b/packages/react-graphql-universal-provider/package.json
@@ -28,10 +28,7 @@
     "@shopify/react-hooks": "^3.0.1",
     "@shopify/react-html": "^12.0.1",
     "@shopify/react-network": "^5.0.1",
-    "apollo-cache-inmemory": ">=1.0.0 <2.0.0",
-    "apollo-client": ">=2.0.0 <3.0.0",
-    "apollo-link": ">=1.0.0 <2.0.0",
-    "apollo-link-context": ">=1.0.0 <2.0.0"
+    "@apollo/client": "^3.5.8"
   },
   "peerDependencies": {
     "react": ">=16.8.0 <19.0.0"
