--- a/packages/react-graphql/package.json
+++ b/packages/react-graphql/package.json
@@ -24,17 +24,13 @@
     "node": "^14.17.0 || >=16.0.0"
   },
   "dependencies": {
-    "@apollo/react-common": ">=3.0.0 <4.0.0",
-    "@apollo/react-hooks": ">=3.0.0 <4.0.0",
+    "@apollo/client": "^3.5.8",
     "@shopify/async": "^4.0.0",
     "@shopify/react-async": "^5.0.1",
     "@shopify/react-effect": "^5.0.1",
     "@shopify/react-hooks": "^3.0.1",
     "@shopify/react-idle": "^3.0.1",
     "@shopify/useful-types": "^5.0.0",
-    "apollo-cache-inmemory": ">=1.0.0 <2.0.0",
-    "apollo-client": ">=2.0.0 <3.0.0",
-    "apollo-link": ">=1.0.0 <2.0.0",
     "graphql-typed": "^2.0.0"
   },
   "devDependencies": {
