--- a/packages/react-graphql-universal-provider/package.json
+++ b/packages/react-graphql-universal-provider/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-graphql-universal-provider",
-  "version": "5.0.0",
+  "version": "5.0.0-a3-beta.1",
   "license": "MIT",
   "description": "A self-serializing/deserializing GraphQL provider that works for isomorphic applications",
   "main": "index.js",
@@ -24,12 +24,11 @@
     "node": "^14.17.0 || >=16.0.0"
   },
   "dependencies": {
-    "@shopify/react-graphql": "^8.0.0",
+    "@apollo/client": "^3.5.8",
+    "@shopify/react-graphql": "^8.0.0-a3-beta.1",
     "@shopify/react-hooks": "^3.0.0",
     "@shopify/react-html": "^12.0.0",
     "@shopify/react-network": "^5.0.0",
-    "@apollo/client": "^3.5.8",
-
     "apollo-link-context": ">=1.0.0 <2.0.0"
   },
   "peerDependencies": {
