Install React & ReactDOM versions both 17 & 18
Both versions are already functionally installed because react-server
is still using React 17. This installs them both under namespaced
packages as react17 and react18. We'll use these values to allow testing
under particular react versions using the REACT_VERSION env var.

--- a/package.json
+++ b/package.json
@@ -70,7 +70,11 @@
     "prettier": "~2.0.4",
     "puppeteer": "^13.2.0",
     "react": "^18.1.0",
+    "react17": "npm:react@^17.0.2",
+    "react18": "npm:react@^18.1.0",
     "react-dom": "^18.1.0",
+    "react-dom17": "npm:react-dom@^17.0.2",
+    "react-dom18": "npm:react-dom@^18.1.0",
     "rimraf": "^2.6.2",
     "tsd": "^0.19.1",
     "typescript": "^4.3.5",
