--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -9,6 +9,7 @@ on:
 jobs:
   node-tests:
     runs-on: ubuntu-latest
+    name: 'Test (Node ${{ matrix.node-version }}, React ${{ matrix.react-version }})'
     strategy:
       matrix:
         # The action will first check the local cache for a semver match.
