--- a/shipit.production-js.yml
+++ b/shipit.production-js.yml
@@ -1,7 +1,9 @@
 ci:
   require:
-    - node-tests (14)
-    - node-tests (16)
+    - Test (Node 14, React 17)
+    - Test (Node 14, React 18)
+    - Test (Node 16, React 17)
+    - Test (Node 16, React 18)
 dependencies:
   post:
     - npm config set @shopify:registry https://registry.npmjs.org
