--- a/packages/graphql-persisted/package.json
+++ b/packages/graphql-persisted/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/graphql-persisted",
-  "version": "4.0.0",
+  "version": "5.0.0-a3-beta.1",
   "license": "MIT",
   "description": "Apollo and Koa integrations for persisted GraphQL queries.",
   "typesVersions": {
@@ -32,10 +32,10 @@
     "node": "^14.17.0 || >=16.0.0"
   },
   "dependencies": {
+    "@apollo/client": "^3.5.8",
     "@types/koa": "^2.0.0",
     "@types/koa-bodyparser": "*",
     "@types/koa-compose": "*",
-    "@apollo/client": "^3.5.8",
     "koa-bodyparser": ">=4.0.0 <5.0.0",
     "koa-compose": ">=4.0.0 <5.0.0"
   },
