--- a/packages/react-graphql/package.json
+++ b/packages/react-graphql/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-graphql",
-  "version": "8.0.0-a3-beta.1",
+  "version": "9.0.0-a3-beta.1",
   "license": "MIT",
   "description": "Tools for creating type-safe and asynchronous GraphQL components for React",
   "main": "index.js",
@@ -31,7 +31,7 @@
     "@shopify/react-hooks": "^3.0.1",
     "@shopify/react-idle": "^3.0.1",
     "@shopify/useful-types": "^5.0.0",
-    "graphql-typed": "^2.0.0"
+    "graphql-typed": "^3.0.0-a3-beta.1"
   },
   "devDependencies": {
     "@shopify/react-testing": "^4.1.0"
