Fix issues with depending on not-current versions (#2308)
We had some cases where packages had peer/dev dependencies on
not-the-current-version. This fixes them

- Remove address-mock's outdated devDependency on jest-dom-mocks as it is
  already has a direct dependency on the current version
- Update graphql-fixtures and graphql-typescript-definitions's peer
  dependency on graphql-typed to include the current version

--- a/packages/graphql-fixtures/package.json
+++ b/packages/graphql-fixtures/package.json
@@ -30,7 +30,7 @@
     "graphql-tool-utilities": "^3.0.0"
   },
   "peerDependencies": {
-    "graphql-typed": ">=0.6.1 <2.0.0"
+    "graphql-typed": "^0.6.1 || ^0.7.0 || ^1.0.0 || ^2.0.0"
   },
   "files": [
     "build/",
