trigger CI on push to changeset-release/* branches

--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -3,7 +3,7 @@ name: Node-CI
 on:
   pull_request: ~
   push:
-    branches: [main]
+    branches: [main, changeset-release/*]
 
 jobs:
   node-tests:
