--- a/.github/workflows/snapit.yml
+++ b/.github/workflows/snapit.yml
@@ -1,4 +1,4 @@
-name: Snapshot
+name: Snapit
 
 on:
   issue_comment:
@@ -13,28 +13,36 @@ jobs:
     if: github.event.issue.pull_request && github.event.comment.body == '/snapit'
     runs-on: ubuntu-latest
     steps:
-      - name: Enforce permission requirement
-        uses: prince-chrismc/check-actor-permissions-action@v1
-        with:
-          permission: write
-
-      - name: Add initial reaction
-        uses: peter-evans/create-or-update-comment@v2
-        with:
-          comment-id: ${{ github.event.comment.id }}
-          reactions: eyes
-
       - name: Validate pull request
         uses: actions/github-script@v6
-        id: pr_data
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           script: |
             try {
+              await github.rest.reactions.createForIssueComment({
+                ...context.repo,
+                comment_id: context.payload.comment.id,
+                content: 'eyes',
+              })
+
+              const actorPermission = (await github.rest.repos.getCollaboratorPermissionLevel({
+                ...context.repo,
+                username: context.actor
+              })).data.permission
+              const isPermitted = ['write', 'admin'].includes(actorPermission)
+
+              if (!isPermitted) {
+                await github.rest.issues.createComment({
+                  ...context.repo,
+                  issue_number: context.issue.number,
+                  body: "Only users with write permission to the respository can run /snapit",
+                })
+
+                core.setFailed(errorMessage)
+                return;
+              }
+
               const pullRequest = await github.rest.pulls.get({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
+                ...context.repo,
                 pull_number: context.issue.number,
               })
 
@@ -43,9 +51,8 @@ jobs:
                 const errorMessage = '`/snapit` is not supported on pull requests from forked repositories.'
 
                 await github.rest.issues.createComment({
+                  ...context.repo,
                   issue_number: context.issue.number,
-                  owner: context.repo.owner,
-                  repo: context.repo.repo,
                   body: errorMessage,
                 })
 
@@ -55,15 +62,10 @@ jobs:
               core.setFailed(`Request failed with error ${err}`)
             }
 
-      - name: Checkout default branch
-        uses: actions/checkout@v2
-
-      # issue_comment requires us to checkout the branch
-      # https://github.com/actions/checkout/issues/331#issuecomment-1120113003
       - name: Checkout pull request branch
-        run: hub pr checkout ${{ github.event.issue.number }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: actions/checkout@v2
+        with:
+          ref: ${{ format('refs/pull/{0}/merge', github.event.issue.number) }}
 
       # Because changeset entries are consumed and removed on the
       # 'changeset-release/main' branch, we need to reset the files
@@ -97,15 +99,9 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           script: |
-            const execa = require('execa')
+            await exec.exec('yarn run changeset version --snapshot snapshot-release')
 
-            await execa.command('yarn version-packages -- --snapshot snapshot-release', { stdio: 'inherit' })
-
-            const releaseProcess = execa.command('yarn release -- --no-git-tags --snapshot --tag snapshot-release')
-            releaseProcess.stdout.pipe(process.stdout)
-
-            const {stdout} = await releaseProcess
-
+            const {stdout} = await exec.getExecOutput('yarn run release -- --no-git-tags --snapshot --tag snapshot-release')
             const newTags = Array
               .from(stdout.matchAll(/New tag:\s+([^\s\n]+)/g))
               .map(([_, tag]) => tag)
@@ -125,15 +121,14 @@ jobs:
                 )).join('\n')
               )
               await github.rest.issues.createComment({
+                ...context.repo,
                 issue_number: context.issue.number,
-                owner: context.repo.owner,
-                repo: context.repo.repo,
                 body,
               })
-            }
 
-      - name: Add final reaction
-        uses: peter-evans/create-or-update-comment@v2
-        with:
-          comment-id: ${{ github.event.comment.id }}
-          reactions: rocket
+              await github.rest.reactions.createForIssueComment({
+                ...context.repo,
+                comment_id: context.payload.comment.id,
+                content: 'rocket',
+              })
+            }
