--- a/packages/react-graphql/package.json
+++ b/packages/react-graphql/package.json
@@ -35,7 +35,8 @@
     "apollo-cache-inmemory": ">=1.0.0 <2.0.0",
     "apollo-client": ">=2.0.0 <3.0.0",
     "apollo-link": ">=1.0.0 <2.0.0",
-    "graphql-typed": "^2.0.0"
+    "graphql-typed": "^2.0.0",
+    "fast-deep-equal": "^3.1.3"
   },
   "devDependencies": {
     "@shopify/react-testing": "^4.1.0"
